perspective-microservices/k8s/prod/perspective-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: perspective-service
  namespace: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: perspective-service
  template:
    metadata:
      labels:
        app: perspective-service
    spec:
      containers:
      - name: perspective-service
        image: <ACR_NAME>.azurecr.io/perspective-service:dev
        ports:
        - containerPort: 5001
---
apiVersion: v1
kind: Service
metadata:
  name: perspective-service
  namespace: dev
spec:
  selector:
    app: perspective-service
  ports:
  - port: 5001
    targetPort: 5001
    protocol: TCP
